# vault-autounseal-operator

./: .dockerignore  .gitignore  .gitmessage  .golangci.yml  .golangci.yml.bak  .pre-commit-config.yaml  .releaserc.json  404.html  BUILD.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INTEGRATION_TESTING_SUMMARY.md  LICENSE  Makefile  Makefile.testing  PENDING_TASK  PROJECT_CONTEXT.md  README.md  SECURITY.md  TESTING.md  bandit.toml  docker-compose.dev.yml  docker-compose.scenario1-dev-vault.yml  docker-compose.scenario2-sealed-vault.yml  go.mod  go.sum  index.html  install.sh  main.go  pyproject.toml  pytest.ini  sitemap.xml
.github/: CI_SUMMARY.md  NEW_CI_ARCHITECTURE.md  WORKFLOW_MIGRATION_GUIDE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflow-backup/: README.md  ci-extended.yaml  ci-primary.yaml  ci.yaml  docs-optimized.yaml  docs.yml  helm-repo.yaml  integration-tests-go.yml  release-optimized.yaml  test.yml  weekly-deep-analysis.yaml
.github/workflows/: README.md  benchmark.yml  ci-new.yaml  ci.yaml  ci.yml  dependabot-automerge.yaml  docs.yml  extended-new.yaml  helm-repo.yaml  integration-tests-go.yml  integration-tests.yml  publish-multi.yml  publish-pypi.yml  release-new.yaml  release-new.yaml.disabled  release.yaml  release.yml  resource-profiling.yml  reusable-build.yaml  reusable-security.yaml  reusable-setup.yaml  reusable-test.yaml  reusable-test.yaml.deprecated  security.yml  test.yml  update-docs.yaml
ARCHITECTURE/: index.html
INTEGRATION_TESTING/: index.html
REFACTORING_GUIDE/: index.html
api/: vault.io_vaultunsealconfigs.yaml
api/go-api/: index.html
architecture/: index.html
claude-context/: 20250820-test-system-refactor-summary.md  20250824-e2e-implementation-complete.md
contributing/: index.html
docs/: ARCHITECTURE.md  INTEGRATION_TESTING.md  REFACTORING_GUIDE.md  examples.md  getting-started.md
examples/: event_driven_usage.go.bak  index.html  quickstart.md  vault-config-secret-ref.yaml  vault-config-simple.yaml  vault-unseal-config.yaml
getting-started/: index.html
helm/vault-autounseal-operator/: Chart.yaml  values.yaml
manifests/: crd.yaml  deployment.yaml  rbac.yaml
monitoring/: index.html
pkg/controller/: controller_modern_test.go  controller_test.go  integration_test.go  vaultunsealconfig_controller.go  vaultunsealconfig_controller_test.go
pkg/logging/: logger.go
pkg/metrics/: metrics.go
pkg/vault/: benchmark_test.go  block.prof  chaos_test.go  client.go  client_refactored_test.go  client_test.go  client_test.go.bak  cpu.prof  (+32 more)
release-process/: index.html
scripts/: build-optimized.sh  demo-crd-validation.sh  prometheus.yml  run-fast-integration.sh  run-integration-tests.sh
search/: search_index.json
security/: index.html
test/: README.md
tests/: Makefile  README.md  conftest.py  go.mod  go.sum  test_crd_generation.py  test_integration.py  test_operator.py  test_pod_watcher.py  test_security.py  test_security_edge_cases.py  test_vault_client.py
troubleshooting/: index.html
(+124 files in other folders)
