[project]
name = "vault-autounseal-operator"
version = "1.0.0"
description = "Production-ready Kubernetes operator for HashiCorp Vault auto-unsealing with comprehensive security and HA support"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pan Teparak", email = "panteparak@gmail.com"}
]
maintainers = [
    {name = "Pan Teparak", email = "panteparak@gmail.com"}
]
keywords = ["kubernetes", "vault", "hashicorp", "operator", "unsealing", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "kubernetes>=29.0.0",
    "kopf>=1.37.2",
    "hvac>=2.3.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "asyncio-throttle>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/panteparak/vault-autounseal-operator"
Repository = "https://github.com/panteparak/vault-autounseal-operator.git"
Documentation = "https://panteparak.github.io/vault-autounseal-operator/"
Issues = "https://github.com/panteparak/vault-autounseal-operator/issues"
Changelog = "https://github.com/panteparak/vault-autounseal-operator/releases"

[project.scripts]
vault-operator = "vault_autounseal_operator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88